# hamilton

./: .pre-commit-config.yaml  .rat-excludes  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: contrib-auto-build-publish.yml  docusaurus-gh-pages.yml  hamilton-main.yml  hamilton-ui-build-and-push.yml
contrib/: README.md  examples  pyproject.toml  requirements.txt
contrib/docs/: compile_docs.py  package-lock.json
contrib/scripts/: version_check.py
contrib/tests/: test_sdist.py
dev_tools/language_server/: LICENSE  README.md  pyproject.toml
dev_tools/vscode_extension/: package-lock.json
docs/: conf.py
docs/how-tos/: index.rst
examples/: README.md  validate_examples.py
examples/airflow/: requirements.txt
examples/async/: README.md  requirements.txt
examples/caching/: in_memory_tutorial.ipynb  materializer_tutorial.ipynb  requirements.txt  tutorial.ipynb
examples/caching_nodes/: caching.ipynb
examples/cli/: README.md  requirements.txt
examples/contrib/: README.md  notebook.ipynb  requirements.txt
examples/dagster/: requirements.txt
examples/dask/: requirements.txt
examples/data_loaders/: data_loaders.ipynb
examples/dbt/: requirements.txt
examples/decoupling_io/: requirements.txt
examples/dlt/: dlt_plugin.ipynb  notebook.ipynb  requirements.txt
examples/due_date_probabilities/: notebook.ipynb
examples/experiment_management/: README.md  notebook.ipynb  requirements.txt
examples/feast/: requirements.txt
examples/hamilton_ui/: README.md  notebook.ipynb  requirements.txt
examples/hello_world/: my_notebook.ipynb  my_script.py  requirements.txt
examples/ibisml/: requirements.txt
examples/jupyter_notebook_magic/: example.ipynb
examples/lineage/: lineage_snippets.ipynb  requirements.txt
examples/materialization/: notebook.ipynb
examples/mlflow/: requirements.txt  tutorial.ipynb
examples/polars/: README.md  (+2 more)
hamilton/: async_driver.py  driver.py  graph.py  htypes.py  version.py
scripts/: README.md  apache_release_helper.py  build_conda.sh  find_hanging_tests.sh  generate_announce_email.py  promote_rc.sh  verification-script.sh
sf-hamilton-redirect/: README.md  build.sh  pyproject.toml.template
tests/: test_end_to_end.py  test_graph.py  test_hamilton_driver.py  test_node.py
ui/: README.md
ui/sdk/: .pre-commit-config.yaml  README.md  examples  pyproject.toml  ruff.toml
ui/sdk/src/hamilton_sdk/: __init__.py
ui/sdk/src/hamilton_sdk/cli/templates/common/: .env.jinja2  README.md.jinja2  requirements.txt.jinja2  run.py.jinja2  run.sh.jinja2
ui/sdk/src/hamilton_sdk/cli/templates/data_processing/: template_data.json
ui/sdk/src/hamilton_sdk/cli/templates/hello_world/: template_data.json
ui/sdk/src/hamilton_sdk/cli/templates/machine_learning/: template_data.json
ui/sdk/src/hamilton_sdk/cli/templates/time_series_feature_engineering/: template_data.json
ui/sdk/tests/: test_sdist.py
writeups/: data_quality.md  developer_setup.md
(+211 files in other folders)
