# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apache-hamilton-sdk"
version = "0.9.0"
description = "Apache Hamilton SDK for reading and writing to the Apache Hamilton backend APIs that support the UI."
readme = "README.md"
requires-python = ">=3.10, <4"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "DISCLAIMER"]
keywords = ["hamilton", "dagworks", "observability"]
authors = [
    {name = "Stefan Krawczyk", email = "stefank@cs.stanford.edu"},
    {name = "Elijah ben Izzy", email = "elijah@dagworks.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "aiohttp",
    "click",
    "gitpython",
    "jinja2",
    "loguru",
    "posthog",
    "requests",
    "apache-hamilton>=1.43.0",
    "sqlglot",
]

[project.urls]
homepage = "https://www.tryhamilton.dev/"
documentation = "https://hamilton.apache.org/"
issues = "https://github.com/apache/hamilton/issues"
source = "https://github.com/apache/hamilton"

[project.scripts]
hamilton-sdk = "hamilton_sdk.cli.cli:cli"

[tool.flit.module]
name = "hamilton_sdk"

[tool.flit.sdist]
include = [
    "LICENSE",
    "NOTICE",
    "DISCLAIMER",
    "requirements.txt",
    "requirements-test.txt",
    "tests/**",
    "examples/**",
]
exclude = [
    ".git/**",
    ".github/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "dist/**",
    "**/*.parquet",
    "**/*.pkl",
    "**/*.ipynb",
    "build/**",
    ".pytest_cache/**",
    ".venv/**",
]

[dependency-groups]
test = [
    "ibis-framework",
    "langchain_core",
    "numpy",
    "polars",
    "pyarrow",
    "pyarrow_hotfix",
    "pydantic",
    "pyspark",
    "pytest",
    "ray; python_version < '3.14'",
]
